testsuite/tests/linear/should_fail/LinearRecordSelectorFail.stderr
LinearRecordSelectorFail.hs:11:7: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘a’
    • In an equation for ‘test1’: test1 a = testA11 a

LinearRecordSelectorFail.hs:17:7: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘a’
    • In an equation for ‘test2’: test2 a = testA2 a

